Fix mobile banner clipping: increase padding-top to 2.5rem

--- a/app.css
+++ b/app.css
@@ -111,7 +111,7 @@ div[data-testid="stSelectbox"] > div > div {
         font-size: 1.1rem !important;
     }
     .block-container {
-        padding-top: 1rem !important;
+        padding-top: 2.5rem !important;
         padding-left: 1rem !important;
         padding-right: 1rem !important;
     }
